[gd_scene load_steps=10 format=3 uid="uid://dlbihv1ffxrey"]

[ext_resource type="Script" path="res://Scripts/Oil_Bottle.gd" id="1_b5xe0"]
[ext_resource type="Script" path="res://Scripts/TakeToInventory.gd" id="2_frf7u"]
[ext_resource type="Script" path="res://Scripts/Player/Noise.gd" id="3_rotlx"]
[ext_resource type="Texture2D" uid="uid://cxq57glyuukxl" path="res://Assets/Elements/wexclamationMark.png" id="4_36337"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bdtly"]
albedo_color = Color(0.27451, 0.615686, 0.32549, 1)

[sub_resource type="SphereMesh" id="SphereMesh_58c0s"]
material = SubResource("StandardMaterial3D_bdtly")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p3pmx"]
albedo_color = Color(0.27451, 0.615686, 0.32549, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_welm7"]
material = SubResource("StandardMaterial3D_p3pmx")

[sub_resource type="SphereShape3D" id="SphereShape3D_sgo2f"]
radius = 0.353018

[node name="OilBottle" type="Node3D"]
script = ExtResource("1_b5xe0")

[node name="Node3D" type="Node3D" parent="."]

[node name="Noise Icon" type="Sprite3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.896271, 0)
modulate = Color(1, 1, 1, 0)
billboard = 1
no_depth_test = true
texture = ExtResource("4_36337")

[node name="oil_bottle" type="RigidBody3D" parent="."]
collision_layer = 4
collision_mask = 31
gravity_scale = 2.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="oil_bottle"]
transform = Transform3D(0.187574, 0, 0, 0, 0.187574, 0, 0, 0, 0.187574, 0, -0.0635721, 0)
mesh = SubResource("SphereMesh_58c0s")

[node name="MeshInstance3D" type="MeshInstance3D" parent="oil_bottle/MeshInstance3D"]
transform = Transform3D(0.538608, 0, 0, 0, 0.538608, 0, 0, 0, 0.538608, 0, 0.449589, 0)
mesh = SubResource("SphereMesh_58c0s")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="oil_bottle/MeshInstance3D"]
transform = Transform3D(0.260031, 0, 0, 0, 0.370534, 0, 0, 0, 0.260031, 0, 0.793349, 0)
mesh = SubResource("CylinderMesh_welm7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="oil_bottle"]
transform = Transform3D(0.348769, 0, 0, 0, 0.348769, 0, 0, 0, 0.348769, 0, 0, 0)
shape = SubResource("SphereShape3D_sgo2f")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="oil_bottle"]
remote_path = NodePath("../../Node3D")
update_rotation = false
update_scale = false

[node name="TakeInventory" type="Node3D" parent="."]
script = ExtResource("2_frf7u")

[node name="NoiseControl" type="Node" parent="." node_paths=PackedStringArray("source", "soundIcon")]
script = ExtResource("3_rotlx")
source = NodePath("../oil_bottle")
soundIcon = NodePath("../Node3D/Noise Icon")
